{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Touch",
            "id": "808c6671-4ab8-4d96-b2b4-ff4e2879c3f2",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "Button",
                    "id": "7b321bd6-da6a-4f85-9df6-c2d1193e09c6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryPosition",
                    "type": "Value",
                    "id": "4fc4e94a-eb21-4781-8a83-1bec9e67ccc6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3adc5b2d-d01b-4783-9201-78797075d929",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53d11c06-c812-4002-93af-5dec375b33ee",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}